Fix gap between navbar and slideup on iOS

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -51,7 +51,7 @@ input {
     left: 0; /* Needed for page transitions to work on iOS */
     padding-bottom: -7%;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     text-align: center;
     overflow-x: hidden;
 }
