--- a/www/css/navbar.css
+++ b/www/css/navbar.css
@@ -6,7 +6,7 @@
     table-layout: fixed;
     background-color: rgb(44, 44, 46);
     width: 100%;
-    height: 7%;
+    height: 7vh;
     bottom: 0;
     z-index: 1;
 }
